subo modificaciones del front

--- a/dado.html
+++ b/dado.html
@@ -23,23 +23,23 @@
         </div>
         <div class="dadodef">
             <img class= "imgdados" src="./Assets/10carasp.jpg" alt="10 caras">
-            <input type="number">
-            <button class="rollit">Roll it!</button>
+            <input type="number" id="cantDado10" >
+            <button class="rollit" id="boton-dado10">Roll it!</button>
             <p>Resultado: 💋</p>
         </div>
         <div class="dadodef">
             <img class= "imgdados" src="./Assets/20 caras.jpg" alt="20 caras">
-            <input type="number">
-            <button class="rollit">Roll it!</button>
+            <input type="number" id="cantDado20" >
+            <button class="rollit" id="boton-dado20">Roll it!</button>
             <p>Resultado: 💋</p>
         </div>
         <div class="dadodef">
             <img class= "imgdados" src="./Assets/100 caras.jpg" alt="100 caras">
-            <input type="number">
-            <button class="rollit">Roll it!</button>
+            <input type="number" id="cantDado100" >
+            <button class="rollit" id="boton-dado100">Roll it!</button>
             <p>Resultado: 💋</p>
         </div>
     </div>
-    <script src="./js/logica.js"> </script>
+    <script src="./js/alter.js"> </script>
 </body>
 </html>
