agrego boton clear

--- a/dado.html
+++ b/dado.html
@@ -17,6 +17,7 @@
             <img class= "imgdados" src="./Assets/6 caras.jpg" alt="6 caras">
             <input id="cantDado6" type="number">
             <button id="boton-dado6" class="rollit">Roll it!</button>
+            <button class="rollit clear" >Clear 🆑</button>
             <section>
                 <ul id="resultado-dado-6"></ul>
             </section>
@@ -25,18 +26,21 @@
             <img class= "imgdados" src="./Assets/10carasp.jpg" alt="10 caras">
             <input type="number" id="cantDado10" >
             <button class="rollit" id="boton-dado10">Roll it!</button>
+            <button class="rollit clear" >Clear 🆑</button>
             <p>Resultado: 💋</p>
         </div>
         <div class="dadodef">
             <img class= "imgdados" src="./Assets/20 caras.jpg" alt="20 caras">
             <input type="number" id="cantDado20" >
             <button class="rollit" id="boton-dado20">Roll it!</button>
+            <button class="rollit clear" >Clear 🆑</button>
             <p>Resultado: 💋</p>
         </div>
         <div class="dadodef">
             <img class= "imgdados" src="./Assets/100 caras.jpg" alt="100 caras">
             <input type="number" id="cantDado100" >
             <button class="rollit" id="boton-dado100">Roll it!</button>
+            <button class="rollit clear" >Clear 🆑</button>
             <p>Resultado: 💋</p>
         </div>
     </div>
