se soluciona problema de funcion de dados

--- a/dado.html
+++ b/dado.html
@@ -44,6 +44,6 @@
             <p>Resultado: 💋</p>
         </div>
     </div>
-    <script src="./js/alter.js"> </script>
+    <script src="js/alter.js"> </script>
 </body>
 </html>
